--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sammy-web-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sammy-esese.github.io",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@iconscout/react-unicons": "^1.1.6",
@@ -14,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-switch": "^6.0.0",
     "swiper": "^8.1.6",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
